[package]
name = "kvs"
authors = ["Zijian Zang <2639980868@qq.com>"]
version = "0.1.0"
edition = "2021"
description = "Demo program that demonstrates the usage of \"KvStore\" core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
serde = { version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
clap = "4.0.32"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.3"
tempfile = "3.3.0"
walkdir = "2.3.2"